<resources>
    <string name="app_name">Recordadora</string>
    <string name="r_titulo">Titulo</string>
    <string name="r_titulo_hint">Titulo...</string>
    <string name="r_desc">Descripción</string>
    <string name="r_desc_hint">Descripción...</string>
    <string name="r_date">Fecha</string>
    <string name="r_hora">Hora</string>
    <string name="r_botton_aceptar">Recordar!</string>
    <string name="r_time_noSet">Tiempo: No selecionado </string>
    <string name="r_select">Elegir</string>
    <string name="r_toast_ok">Recordatorio enviado!"</string>
    <string name="r_toast_sad">Algo anda mal! :("</string>
    <string name="r_date_hint">dd/mm/aaaa</string>
    <string name="r_hora_hint">hh:mm</string>
    <string name="r_error_cargar">Por favor complete todos los campos</string>
    <string name="channel_name">21496</string>
    <string name="drawer_O">Drawer open</string>
    <string name="drawer_C">Drawer close</string>
    <string name="add_msj_cositas"> No tiene ningun recordatorio</string>
    <string name="song_noti">Notificacion song</string>
    <string name="r_toast_save_ok">Su recordatorio ha sido debidamente recordada</string>
    <string name="r_toast_save_sad">Error al recuperar los datos</string>
</resources><!--  <string name=""></string> -->